@startuml
skinparam classAttributeIconSize 0

package "class AbstractFactory(抽象工厂模式)" #DDDDDD {

interface IElectricalFactory{
+createFan():IFan
+createTubeLight():ITubeLight
}

class ChineseElectricalFactory {
+createFan():IFan
+createTubeLight():ITubeLight
}

class UsElectricalFactory {
+createFan():IFan
+createTubeLight():ITubeLight
}

interface IFan {
+switchOn():void
+switchOff():void
}

class ChineseFan {
+switchOn():void
+switchOff():void
}

class UsFan {
+switchOn():void
+switchOff():void
}

interface ITubeLight{
+switchOn():void
+switchOff():void
+turnOn():void
}

class ChineseTubeLight{
+switchOn():void
+switchOff():void
+turnOn():void
}

class UsTubeLight{
+switchOn():void
+switchOff():void
+turnOn():void
}


    ITubeLight <.. UsTubeLight
    ITubeLight <.. ChineseTubeLight
    IFan <.. ChineseFan
    IFan <.. UsFan
    IElectricalFactory <.. ChineseElectricalFactory
    IElectricalFactory <.. UsElectricalFactory
}
@enduml
